new proj/src/objects/GE_PRM_Performance__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_1_Year_Growth_Rate_Max_Score__c</fullName>
        <description>1 Year Growth Rate Max Score</description>
        <inlineHelpText>1 Year Growth Rate Max Score</inlineHelpText>
        <label>1 Year Growth Rate Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_1_Year_Growth_Rate_Rating__c</fullName>
        <description>1 Year Growth Rate Rating</description>
        <inlineHelpText>1 Year Growth Rate Rating</inlineHelpText>
        <label>1 Year Growth Rate Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_1_Year_Growth_Rate__c</fullName>
        <description>1 Year Growth Rate</description>
        <inlineHelpText>1 Year Growth Rate</inlineHelpText>
        <label>1 Year Growth Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_1_year_Growth_Rate_Partner_Score__c</fullName>
        <description>1 Year Growth Rate Partner Score</description>
        <inlineHelpText>1 Year Growth Rate Partner Score</inlineHelpText>
        <label>1 Year Growth Rate Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_3_Year_Growth_Rate_Partner_Score__c</fullName>
        <description>3 Year Growth Rate Partner Score</description>
        <inlineHelpText>3 Year Growth Rate Partner Score</inlineHelpText>
        <label>3 Year Growth Rate Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_3_Year_Growth_Rate_Rating__c</fullName>
        <description>3 Year Growth Rate Rating</description>
        <inlineHelpText>3 Year Growth Rate Rating</inlineHelpText>
        <label>3 Year Growth Rate Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_3_Year_Growth_Rate__c</fullName>
        <description>3 Year Growth Rate</description>
        <inlineHelpText>3 Year Growth Rate</inlineHelpText>
        <label>3 Year Growth Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_3_year_Growth_Rate_Max_Score__c</fullName>
        <description>3 Year Growth Rate Max Score</description>
        <inlineHelpText>3 Year Growth Rate Max Score</inlineHelpText>
        <label>3 Year Growth Rate Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Business_Plan_Max_Score__c</fullName>
        <description>Business Plan Max Score</description>
        <inlineHelpText>Business Plan Max Score</inlineHelpText>
        <label>Business Plan Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Business_Plan_Partner_Score__c</fullName>
        <description>Business Plan Partner Score</description>
        <inlineHelpText>Business Plan Partner Score</inlineHelpText>
        <label>Business Plan Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Business_Plan_Rating__c</fullName>
        <description>Business Plan Rating</description>
        <inlineHelpText>Business Plan Rating</inlineHelpText>
        <label>Business Plan Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Business_Plan__c</fullName>
        <description>Business Plan?</description>
        <inlineHelpText>Business Plan?</inlineHelpText>
        <label>Business Plan?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_CY_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CY Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_C_Master_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Agreement #</label>
        <referenceTo>GE_ES_Contracts__c</referenceTo>
        <relationshipLabel>Financials / Performance (Master Agreement #)</relationshipLabel>
        <relationshipName>Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_C_Sub_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement #</label>
        <referenceTo>GE_ES_Contracts__c</referenceTo>
        <relationshipLabel>Financials / Performance (Sub Agreement #)</relationshipLabel>
        <relationshipName>Performance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Channel_Type__c</fullName>
        <description>Channel Type</description>
        <inlineHelpText>Channel Type</inlineHelpText>
        <label>Channel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Date__c</fullName>
        <description>Date</description>
        <inlineHelpText>Date</inlineHelpText>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Engagement_Max_Score__c</fullName>
        <description>Engagement Max Score</description>
        <inlineHelpText>Engagement Max Score</inlineHelpText>
        <label>Engagement Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Engagement_Partner_Score__c</fullName>
        <description>Engagement Partner Score</description>
        <inlineHelpText>Engagement Partner Score</inlineHelpText>
        <label>Engagement Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Engagement_Rating__c</fullName>
        <description>Engagement Rating</description>
        <inlineHelpText>Engagement Rating</inlineHelpText>
        <label>Engagement Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Engagement__c</fullName>
        <description>Engagement</description>
        <inlineHelpText>Engagement</inlineHelpText>
        <label>Engagement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GE_Channel_Orders_Partner_Score__c</fullName>
        <description>% GE To Channel Orders Partner Score</description>
        <inlineHelpText>% Ge To Channel Orders Partner Score</inlineHelpText>
        <label>% Ge To Channel Orders Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GE_to_Channel_Orders_Max_Score__c</fullName>
        <description>% GE To Channel Orders Max Score</description>
        <inlineHelpText>% Ge To Channel Orders Max Score</inlineHelpText>
        <label>% Ge To Channel Orders Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GE_to_Channel_Orders_Rating__c</fullName>
        <description>% Ge To Channel Orders Rating</description>
        <inlineHelpText>% Ge To Channel Orders Rating</inlineHelpText>
        <label>% Ge To Channel Orders Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_GE_to_Channel_Orders__c</fullName>
        <description>% GE To Channel Orders</description>
        <inlineHelpText>% Ge To Channel Orders</inlineHelpText>
        <label>% Ge To Channel Orders</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Input_Metrics__c</fullName>
        <description>Input Metrics</description>
        <inlineHelpText>Input Metrics</inlineHelpText>
        <label>Input Metrics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market_Penetration_Max_Score__c</fullName>
        <description>Market Penetration Max Score</description>
        <inlineHelpText>Market Penetration Max Score</inlineHelpText>
        <label>Market Penetration Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market_Penetration_Partner_Score__c</fullName>
        <description>Market Penetration Partner Score</description>
        <inlineHelpText>Market Penetration Partner Score</inlineHelpText>
        <label>Market Penetration Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market_Penetration_Rating__c</fullName>
        <description>Market Penetration Rating</description>
        <inlineHelpText>Market Penetration Rating</inlineHelpText>
        <label>Market Penetration Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Market_Penetration__c</fullName>
        <description>Market Penetration</description>
        <inlineHelpText>Market Penetration</inlineHelpText>
        <label>Market Penetration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Agreement_Score_Card__c</fullName>
        <description>Checks if the Score Card is for Master Agreement or Not.</description>
        <formula>IF(OR(GE_PRM_Master_Agreement__r.GE_PRM_Master_Agreement__r.Id  !=&apos;&apos;, GE_PRM_Master_Agreement__r.GE_PRM_Master_Agreement__r.Id !=null), &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Master Agreement Score Card</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Agreement_Text__c</fullName>
        <label>Master Agreement #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Master_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Agreement #</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_OP_Figure__c</fullName>
        <label>OP Figure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_OP_Year__c</fullName>
        <label>OP Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_1_Max_Score__c</fullName>
        <description>Optional Metric #1 Max Score</description>
        <inlineHelpText>Optional Metric #1 Max Score</inlineHelpText>
        <label>Optional Metric #1 Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_1_Partner_Score__c</fullName>
        <description>Optional Metric #1 Partner Score</description>
        <inlineHelpText>Optional Metric #1 Partner Score</inlineHelpText>
        <label>Optional Metric #1 Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_1_Rating__c</fullName>
        <description>Optional Metric #1 Rating</description>
        <inlineHelpText>Optional Metric #1 Rating</inlineHelpText>
        <label>Optional Metric #1 Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_1__c</fullName>
        <description>Optional Metric #1</description>
        <inlineHelpText>Optional Metric #1</inlineHelpText>
        <label>Optional Metric #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_2_Max_Score__c</fullName>
        <description>Optional Metric #2 Max Score</description>
        <inlineHelpText>Optional Metric #2 Max Score</inlineHelpText>
        <label>Optional Metric #2 Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_2_Partner_Score__c</fullName>
        <description>Optional Metric #2 Partner Score</description>
        <inlineHelpText>Optional Metric #2 Partner Score</inlineHelpText>
        <label>Optional Metric #2 Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_2_Rating__c</fullName>
        <description>Optional Metric #2 Rating</description>
        <inlineHelpText>Optional Metric #2 Rating</inlineHelpText>
        <label>Optional Metric #2 Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_2__c</fullName>
        <description>Optional Metric #2</description>
        <inlineHelpText>Optional Metric #2</inlineHelpText>
        <label>Optional Metric #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_Name_1__c</fullName>
        <description>Optional Metric Name 1</description>
        <inlineHelpText>Optional Metric Name 1</inlineHelpText>
        <label>Optional Metric Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Optional_Metric_Name_2__c</fullName>
        <description>Optional Metric Name 2</description>
        <inlineHelpText>Optional Metric Name 2</inlineHelpText>
        <label>Optional Metric Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Order_Volume_Max_Score__c</fullName>
        <description>Order Volume Max Score</description>
        <inlineHelpText>Order Volume Max Score</inlineHelpText>
        <label>Order Volume Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Order_Volume_Partner_Score__c</fullName>
        <description>Order Volume Partner Score</description>
        <inlineHelpText>Order Volume Partner Score</inlineHelpText>
        <label>Order Volume Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Orders_Volume_Rating__c</fullName>
        <description>Orders Volume Rating</description>
        <inlineHelpText>Orders Volume Rating</inlineHelpText>
        <label>Orders Volume Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Orders_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Orders Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Output_Metrics__c</fullName>
        <description>Output Metrics</description>
        <inlineHelpText>Output Metrics</inlineHelpText>
        <label>Output Metrics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Overall_Max_Score__c</fullName>
        <description>Overall Max Score</description>
        <inlineHelpText>Overall Max Score</inlineHelpText>
        <label>Overall Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Overall_Partner_Rating__c</fullName>
        <description>Overall Partner Rating</description>
        <inlineHelpText>Overall Partner Rating</inlineHelpText>
        <label>Overall Partner Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Overall_Partner_Score__c</fullName>
        <description>Overall Partner Score</description>
        <inlineHelpText>Overall Partner Score</inlineHelpText>
        <label>Overall Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Overall_Peer_Average__c</fullName>
        <description>Overall Peer Average</description>
        <inlineHelpText>Overall Peer Average</inlineHelpText>
        <label>Overall Peer Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Overall_Peer_Rating__c</fullName>
        <description>Overall Peer Rating</description>
        <inlineHelpText>Overall Peer Rating</inlineHelpText>
        <label>Overall Peer Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Overall_of_Max_Score__c</fullName>
        <description>Overall % Of Max Score</description>
        <inlineHelpText>Overall % Of Max Score</inlineHelpText>
        <label>Overall % Of Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_PY1_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PY-1 Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_PY2_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PY-2 Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_PY_Orders__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PY Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Partner_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Partner Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Per_Resource_Rating__c</fullName>
        <description>$Per Resource Rating</description>
        <inlineHelpText>$Per Resource Rating</inlineHelpText>
        <label>$Per Resource Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Per_Sales_Resource_Max_Score__c</fullName>
        <description>$ Per Sales Resource Max Score</description>
        <inlineHelpText>$ Per Sales Resource Max Score</inlineHelpText>
        <label>$ Per Sales Resource Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Per_Sales_Resource_Partner_Score__c</fullName>
        <description>$ Per Sales Resource Partner Score</description>
        <inlineHelpText>$ Per Sales Resource Partner Score</inlineHelpText>
        <label>$ Per Sales Resource Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Per_Sales_Resource__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ Per Sales Resource</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pipeline_Size_Max_Score__c</fullName>
        <description>Pipeline Size Max Score</description>
        <inlineHelpText>Pipeline Size Max Score</inlineHelpText>
        <label>Pipeline Size Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pipeline_Size_Partner_Score__c</fullName>
        <description>Pipeline Size Partner Score</description>
        <inlineHelpText>Pipeline Size Partner Score</inlineHelpText>
        <label>Pipeline Size Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pipeline_Size_Rating__c</fullName>
        <description>Pipeline Size Rating</description>
        <inlineHelpText>Pipeline Size Rating</inlineHelpText>
        <label>Pipeline Size Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pipeline_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pipeline Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Pipeline_Size_vs_Plan__c</fullName>
        <description>Pipeline Size Vs Plan</description>
        <inlineHelpText>Pipeline Size Vs Plan</inlineHelpText>
        <label>Pipeline Size Vs Plan</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Product_Training_Max_Score__c</fullName>
        <description>Product Training Max Score</description>
        <inlineHelpText>Product Training Max Score</inlineHelpText>
        <label>Product Training Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Product_Training_Partner_Score__c</fullName>
        <description>Product Training Partner Score</description>
        <inlineHelpText>Product Training Partner Score</inlineHelpText>
        <label>Product Training Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Product_Training_Rating__c</fullName>
        <description>Product Training Rating</description>
        <inlineHelpText>Product Training Rating</inlineHelpText>
        <label>Product Training Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Product_Training__c</fullName>
        <description>Product Training</description>
        <inlineHelpText>Product Training</inlineHelpText>
        <label>Product Training</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Receivable_Terms__c</fullName>
        <description>Receivable Terms</description>
        <inlineHelpText>Receivable Terms</inlineHelpText>
        <label>Receivable Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Receivables_Aging_Max_Score__c</fullName>
        <description>Receivables Aging Max Score</description>
        <inlineHelpText>Receivables Aging Max Score</inlineHelpText>
        <label>Receivables Aging Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Receivables_Aging_Partner_Score__c</fullName>
        <description>Receivables Aging Partner Score</description>
        <inlineHelpText>Receivables Aging Partner Score</inlineHelpText>
        <label>Receivables Aging Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Receivables_Aging__c</fullName>
        <description>Receivables Aging</description>
        <inlineHelpText>Receivables Aging</inlineHelpText>
        <label>Receivables Aging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Receivables_Aging_rating__c</fullName>
        <description>Receivables Aging Rating</description>
        <inlineHelpText>Receivables Aging Rating</inlineHelpText>
        <label>Receivables Aging Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SAS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Stock_vs_Drop_Max_Score__c</fullName>
        <description>Stock Vs Drop Max Score</description>
        <inlineHelpText>Stock Vs Drop Max Score</inlineHelpText>
        <label>Stock Vs Drop Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Stock_vs_Drop_Partner_Score__c</fullName>
        <description>Stock Vs Drop Partner Score</description>
        <inlineHelpText>Stock Vs Drop Partner Score</inlineHelpText>
        <label>Stock Vs Drop Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Stock_vs_Drop_Rating__c</fullName>
        <description>Stock Vs Drop Rating</description>
        <inlineHelpText>Stock Vs Drop Rating</inlineHelpText>
        <label>Stock Vs Drop Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Stock_vs_Drop__c</fullName>
        <description>Stock Vs Drop</description>
        <inlineHelpText>Stock Vs Drop</inlineHelpText>
        <label>Stock Vs Drop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Sub_Agreement_Text__c</fullName>
        <label>Sub Agreement #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Sub_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement #</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Financials / Performance (Sub Agreement #)</relationshipLabel>
        <relationshipName>Performance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <description>Tier 2</description>
        <inlineHelpText>Tier 2</inlineHelpText>
        <label>Tier 2 P&amp;L</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_3__c</fullName>
        <description>Tier 3</description>
        <inlineHelpText>Tier 3</inlineHelpText>
        <label>Tier 3 P&amp;L</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_4__c</fullName>
        <description>Tier 4</description>
        <inlineHelpText>Tier 4</inlineHelpText>
        <label>Tier 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Variance_to_Goal_Max_Score__c</fullName>
        <description>Variance To Goal Max Score</description>
        <inlineHelpText>Variance To Goal Max Score</inlineHelpText>
        <label>Variance To Goal Max Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Variance_to_Goal_Partner_Score__c</fullName>
        <description>Variance To Goal Partner Score</description>
        <inlineHelpText>Variance To Goal Partner Score</inlineHelpText>
        <label>Variance To Goal Partner Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Variance_to_Goal_Rating__c</fullName>
        <description>Variance To Goal Rating</description>
        <inlineHelpText>Variance To Goal Rating</inlineHelpText>
        <label>Variance To Goal Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Variance_to_Goal__c</fullName>
        <description>Variance To Goal</description>
        <inlineHelpText>Variance To Goal</inlineHelpText>
        <label>Variance To Goal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_of_Sales_Resources__c</fullName>
        <description># Of Sales Resources</description>
        <inlineHelpText># Of Sales Resources</inlineHelpText>
        <label># Of Sales Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financials / Performance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_PRM_Partner_Name__c</columns>
        <columns>GE_PRM_Master_Agreement_Text__c</columns>
        <columns>GE_PRM_Sub_Agreement_Text__c</columns>
        <columns>GE_PRM_Channel_Manager__c</columns>
        <columns>GE_PRM_Tier_2__c</columns>
        <columns>GE_PRM_Tier_3__c</columns>
        <columns>GE_PRM_Overall_Partner_Score__c</columns>
        <columns>GE_PRM_Overall_of_Max_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Master_Agreements</fullName>
        <columns>NAME</columns>
        <columns>GE_PRM_Master_Agreement_Text__c</columns>
        <columns>GE_PRM_Sub_Agreement_Text__c</columns>
        <columns>GE_PRM_Channel_Manager__c</columns>
        <columns>GE_PRM_Tier_2__c</columns>
        <columns>GE_PRM_Tier_3__c</columns>
        <columns>GE_PRM_Overall_Partner_Score__c</columns>
        <columns>GE_PRM_Overall_of_Max_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_PRM_Master_Agreement_Text__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>GE_PRM_Sub_Agreement_Text__c</field>
            <operation>equals</operation>
        </filters>
        <label>Master Agreements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials / Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>